--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Library</title>
 </head>
 <body>
@@ -39,6 +40,7 @@
       </div>
       <footer>
         <h4>Amal&copy; 2020</h4>
+        <a href="https://github.com/Amal337"><i class="fa fa-github" style="font-size:36px; color:black"></i></a>
       </footer>
 
         <script src="object.js"></script>
