object.js modified

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <h4>Amal&copy; 2020</h4>
         <a href="https://github.com/Amal337"><i class="fa fa-github" style="font-size:36px; color:black"></i></a>
       </footer>
+      
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.7.4/localforage.min.js"></script>
+      <script src="object.js"></script>
 
-        <script src="object.js"></script>
 </body>
 </html>
